# employee-stock-analyzer

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.json  pyproject.toml  setup.sh
doc/spec/: design_architecture.md  design_data_model.md  design_logic.md  requirement.md
doc/usage/: README.md  backup.md  concepts.md  csv.md  install.md  plan.md  summary.md  transaction.md
src/cli/: main.py  plan_commands.py  summary_commands.py  transaction_commands.py
src/domain/: models.py  portfolio.py
src/infrastructure/: config_repository.py  data_repository.py  schema.sql
src/service/: backup_service.py  calculation_engine.py  csv_service.py  plan_service.py  transaction_service.py
test/: test_calculation_engine.py  test_csv_service.py  test_plan_service.py  test_transaction_service.py
