[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "employee-stock-analyzer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]

[project.scripts]
stock = "cli.main:cli"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
